--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 body{
   width: 100%;
   height: auto;
+  min-height: 100vh;
 
   background-color: rgb(71, 71, 71);
 
@@ -28,8 +29,11 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 1rem;
 
   margin: 5vh 0;
+
+  text-align: center;
 }
 
 h1{
